config layout bug time

--- a/css/config.css
+++ b/css/config.css
@@ -198,7 +198,7 @@ h4{
     .inputTime{
       font-size: 3.3vw;
       width: 26%;
-      padding-right: 1px;
+      text-indent: -0.5px;
     }
 
     .switch {
